# tbtwd-jira-mcp

./: .gitignore  README.md  pyproject.toml
.github/agents/: vault-dev.agent.md
src/tbtwd_jira_mcp/: config.py  jira_client.py  server.py
